<resources>
    <string name="app_name">ConnectFour</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_single_player">SinglePlayerActivity</string>
    <string name="playSinglePlayerGame">SinglePlayer</string>
    <string name="playMultiPlayerGame">MultiPlayer</string>
    <string name="title_activity_multi_player">MultiPlayerActivity</string>
    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="sign_in_explanation">Sign with Google to upload your achievements and share with friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign out</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="welcome_message">Welcome to Connect Four Multiplayer! Please sign in to Google to start playing.</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="turn_counter">Turn counter</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="quick_match">Quick match</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="oppo_profile">Opponent profile picture</string>
    <string name="user_profile">User profile picture</string>
    <string name="rematch">Rematch</string>
    <string name="quit">Quit</string>
    <string name="singleplayertip">Play a game against an AI opponent.</string>
    <string name="multiplayertip">Play a game against a friend through Google plus.</string>

    <string-array name="difficulty_array">
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_multi_player_fragment">MultiPlayerFragmentActivity</string>

    <!-- Achievements -->
    <string name="JOURNEY_STARTED">CgkIr-vQv_saEAIQAQ</string>
    <string name="TASTE_OF_BLOOD">CgkIr-vQv_saEAIQAw</string>
    <string name="WINSOME_LOSESOME">CgkIr-vQv_saEAIQBA</string>
    <string name="CHALLENGER_APPEARED">CgkIr-vQv_saEAIQBQ</string>
    <string name="CHALLENGE_ACCEPTED">CgkIr-vQv_saEAIQBg</string>
    <string name="UP_AND_COMER">CgkIr-vQv_saEAIQBw</string>
    <string name="BEASTMODE">CgkIr-vQv_saEAIQCA</string>

    <!-- Leaderboard -->
    <string name="LEADERBOARD">CgkIr-vQv_saEAIQCQ</string>
</resources>
