<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.raggiadolf.connectfour.MultiPlayerActivity">

    <!-- SIGN-IN BAR -->
    <LinearLayout android:id="@+id/sign_in_bar" style="@style/SignInOutBar">
        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_sign_in" style="@style/SignInButton" />

        <TextView style="@style/SignInOutBarBlurb" android:text="@string/sign_in_explanation" />
    </LinearLayout>

    <!-- SIGN-OUT BAR -->
    <LinearLayout android:id="@+id/sign_out_bar" style="@style/SignInOutBar"
        android:visibility="gone">

        <TextView style="@style/SignInOutBarBlurb"
            android:text="@string/you_are_signed_in" />

        <Button style="@style/SignOutButton" android:id="@+id/button_sign_out"
            android:text="@string/sign_out" />

    </LinearLayout>

    <Button
        android:id="@+id/quickMatchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Quick Match"
        android:onClick="onQuickMatchClicked"
        android:layout_below="@+id/sign_in_bar"
        android:layout_alignParentStart="true" />

</RelativeLayout>
