<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.raggiadolf.connectfour.MultiPlayerActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="visible" >

        <!-- sign-in button -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/welcome_message"
            android:textAppearance="@style/GuessWordText" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content" >
        </com.google.android.gms.common.SignInButton>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameplay_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        tools:context=".MultiPlayerActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/userDisplayBackground"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginBottom="20dp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <com.pkmmte.view.CircularImageView
                    android:id="@+id/userimage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/user_profile"
                    android:scaleType="fitXY"
                    android:layout_gravity="start"
                    app:border="true"
                    app:border_width="1dp"
                    />
                <TextView
                    android:id="@+id/userdisplayname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:layout_gravity="start"
                    android:textColor="#000"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >


                <com.pkmmte.view.CircularImageView
                    android:id="@+id/opponentimage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/oppo_profile"
                    android:scaleType="fitXY"
                    android:layout_gravity="end"
                    app:border="true"
                    app:border_width="1dp"
                    />
                <TextView
                    android:id="@+id/opponentdisplayname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:layout_gravity="end"
                    android:textColor="#000"
                    />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/gameplayfragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameovermessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:orientation="vertical"
        android:gravity="center"
        android:alpha="0.85"
        >

        <TextView
            android:id="@+id/gameovertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rematch"
                android:onClick="rematch"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quit"
                android:onClick="backToMainMenu"
                />

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/matchup_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:context=".MultiPlayerActivity" >

        <LinearLayout
            android:id="@+id/secret_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="visible"
            tools:context=".MultiPlayerActivity"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_small"
                android:text=""
                android:textAppearance="@style/HelpText.Caption"
                android:textColor="#fff"
                />


            <Button
                android:id="@+id/startMatchButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onStartMatchClicked"
                android:text="@string/start_match" />

            <Button
                android:id="@+id/checkGamesButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckGamesClicked"
                android:text="@string/check_games" />

            <Button
                android:id="@+id/checkAchievements"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckAchievementsClicked"
                android:text="@string/achievements" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_out" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAAAA"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>
